# disnixos

./: Makefile.am  NEWS  README.md  configure.ac  release.nix
data/: Makefile.am  backdoor.nix  build-vms.nix  disnix-infrastructure-module.nix  generate-infrastructure.nix  generate-infrastructure.nix.in  generate-services.nix.in  generate-tests.nix.in  generate-testscript.nix  infrastructure.nix.in  instantiate.nix.in  lib.nix  manifest.nix.in  qemu-vm.nix  services.nix.in  testing.nix.in  vms.nix
doc/manual/: Makefile.am  background.xml  disnix-backdoor-client.xml  disnix-nixops-client.xml  disnixos-collect-garbage.xml  disnixos-deploy-network.xml  disnixos-env.xml  disnixos-geninfra.xml  disnixos-genservices.xml  disnixos-gentests.xml  disnixos-instantiate.xml  disnixos-manifest.xml  disnixos-query.xml  disnixos-vm-env.xml  index.xml  installation.xml  introduction.xml  usage.xml
nix/: Makefile.am  disnix-infrastructure-module.nix  generate-distributed-derivation.nix  generate-infrastructure.nix.in  generate-manifest.nix  generate-tests.nix.in  generate-testscript.nix  infrastructure.nix.in  instantiate.nix  instantiate.nix.in  lib.nix  manifest.nix  manifest.nix.in  testing.nix.in
scripts/: Makefile.am  checks  disnix-backdoor-client.in  disnix-generate-infra.in  disnix-generate-vms.in  disnix-nixops-client.in  disnix-vm-env  disnix-vm-env.in  disnixos-capture-manifest.in  disnixos-clean-snapshots.in  disnixos-collect-garbage.in  disnixos-convert-manifest.in  disnixos-convert.in  disnixos-delegate.in  disnixos-delete-network-state.in  disnixos-deploy-network.in  disnixos-env.in  disnixos-geninfra.in  disnixos-genservices.in  disnixos-gentests.in  disnixos-instantiate.in  disnixos-manifest.in  disnixos-query.in  disnixos-reconstruct.in  disnixos-restore-network.in  disnixos-snapshot-network.in  disnixos-vm-env.in
tests/: deployment-infra-with-data.nix  deployment-infra.nix  deployment-nixops.nix  deployment-services-with-data.nix  deployment-services.nix  distbuild-infra.nix  distbuild-services.nix  generate-logical-config.nix  generate-logical-network.nix  generate-physical-config.nix  generate-physical-network-for-nixops.nix  generate-physical-network.nix  machine-with-nixops.nix  machine.nix  nixops-client.nix  snapshots.nix
tests/manifest/: distribution-server.nix
tests/manifest/pkgs/: default.nix  testService1.nix  testService2.nix  testService3.nix
tests/snapshots/: services-state.nix  wrapper.nix
