pkgdata_DATA = generate-infrastructure.nix generate-services.nix generate-tests.nix infrastructure.nix.in services.nix.in testing.nix lib.nix manifest.nix
EXTRA_DIST = generate-infrastructure.nix.in generate-services.nix.in generate-tests.nix.in infrastructure.nix.in services.nix.in testing.nix.in lib.nix manifest.nix.in
