pkgdata_DATA = generate-infrastructure.nix generate-tests.nix infrastructure.nix.in testing.nix lib.nix manifest.nix instantiate.nix disnix-infrastructure-module.nix generate-testscript.nix
EXTRA_DIST = generate-infrastructure.nix.in generate-tests.nix.in infrastructure.nix.in testing.nix.in lib.nix manifest.nix.in instantiate.nix.in disnix-infrastructure-module.nix generate-testscript.nix
