bin_SCRIPTS = disnix-backdoor-client disnix-nixops-client disnixos-geninfra disnixos-genservices disnixos-gentests disnixos-manifest disnixos-env disnixos-vm-env disnixos-deploy-network
pkgdata_SCRIPTS = checks

EXTRA_DIST = checks disnix-backdoor-client.in disnix-nixops-client.in disnixos-geninfra.in disnixos-genservices.in disnixos-gentests.in disnixos-manifest.in disnixos-env.in disnixos-vm-env.in disnixos-deploy-network.in
