bin_SCRIPTS = disnix-backdoor-client disnix-nixops-client disnixos-geninfra disnixos-gentests disnixos-instantiate disnixos-manifest disnixos-env disnixos-vm-env disnixos-deploy-network disnixos-collect-garbage disnixos-query
pkgdata_SCRIPTS = checks

EXTRA_DIST = checks disnix-backdoor-client.in disnix-nixops-client.in disnixos-geninfra.in disnixos-gentests.in disnixos-instantiate.in disnixos-manifest.in disnixos-env.in disnixos-vm-env.in disnixos-deploy-network.in disnixos-collect-garbage.in disnixos-query
